# trust_vae_git

./: README.md
trust_vae_package/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py
trust_vae_package/docs/: INSTALL.md
trust_vae_package/notebooks/: Baseline_trust_vae.ipynb  GAN_EVALUATION.ipynb  Gradio_prototype_TRUSTVAE.ipynb  Training_VAE.ipynb  initial_training_improvedVAE.ipynb
trust_vae_package/trust_vae/: __init__.py  models.py  utils.py  version.py
