[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trust-vae"
version = "1.0.0"
description = "Task-Aware, Uncertainty-Guided and Interpretable VAE"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "TRUST-VAE Team", email = "trustvae@example.com"}
]
keywords = ["vae", "deep-learning", "pytorch", "medical-imaging", "generative-models"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourusername/trust-vae"
Issues = "https://github.com/yourusername/trust-vae/issues"